[project]
name = 'ingress'
description = 'A command line tool for working with Ingress data.'
license = {file = 'LICENSE'}
keywords = ['ingress', 'game', 'cli']
classifiers = [
  'Topic :: Games/Entertainment',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: POSIX',
]
authors = [
  {name = 'Mike Castle', email = 'dalgoda@gmail.com'},
]
dependencies = [
  'mundane>=1',
  'attrs>=22.2.0',
  'pyproj>=3.4.1',
  'pyshp>=2.3.1',
  'Rtree>=1.0.1',
  'Shapely>=1.8.5',
  'SQLAlchemy>=1.4.46',
  'toposort>=1.9',
]
dynamic = ['version']

[project.scripts]
ingress = 'ingress.__main__:main'

[project.urls]
Repository = 'https://github.com/nexushoratio/ingress'
Issues = 'https://github.com/nexushoratio/ingress/issues'

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.coverage.run]
branch = true
data_file = '.coverage/data_file'
command_line = '-m unittest discover -p *_test.py'
source = ['.']

[tool.coverage.html]
directory = '.coverage/html'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
skipsdist = True
isolated_build = True

[testenv]
passenv = PYTHON*
sitepackages = True
commands =
    python -m coverage run
    python -m coverage report
    python -m coverage html
"""
