[project]
name = 'ingress'
description = 'A command line tool for working with Ingress data.'
license = {file = 'LICENSE'}
keywords = ['ingress', 'game', 'cli']
classifiers = [
  'Topic :: Games/Entertainment',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Operating System :: POSIX',
]
authors = [
  {name = 'Mike Castle', email = 'dalgoda@gmail.com'},
]
dependencies = [
  'mundane>=1',
  'attrs>=22.2.0',
  'pyproj>=3.4.1',
  'pyshp>=2.3.1',
  'Rtree>=1.0.1',
  'Shapely>=1.8.5',
  'SQLAlchemy>=1.4.46',
  'toposort>=1.9',
]
dynamic = ['version']

[project.scripts]
ingress = 'ingress.__main__:main'

[project.urls]
Repository = 'https://github.com/nexushoratio/ingress'
Issues = 'https://github.com/nexushoratio/ingress/issues'

[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[tool.yapf]
column_limit = 78
join_multiple_lines = false
space_between_ending_comma_and_closing_bracket = false
split_before_arithmetic_operator = true
split_before_dot = true
split_before_first_argument = true
split_complex_comprehension = true

[tool.pylint.basic]
docstring-min-length = 2
good-names = ["setUpModule"]
no-docstring-rgx = "(^__|_?test.*|.*Test)"

[tool.pylint.messages_control]
disable = [
  'use-dict-literal',
  'use-list-literal',
  # TODO(#15): The following need to be addressed
  'consider-using-f-string',
  'consider-using-with',
  'inconsistent-return-statements',
  'missing-function-docstring',
  'no-else-return',
  'no-member',
  'redefined-outer-name',
  'stop-iteration-return',
  'too-few-public-methods',
  'too-many-arguments',
  'too-many-function-args',
  'too-many-locals',
  'undefined-variable',
  'unnecessary-pass',
  'unused-argument',
  'unused-import',
  'unused-variable',
]

[tool.pylint.miscellaneous]
notes = ["FIXME"]

[tool.coverage.run]
branch = true
data_file = '.coverage/data_file'
command_line = '-m unittest discover -p *_test.py'
source = ['.']

[tool.coverage.html]
directory = '.coverage/html'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3
skipsdist = True
isolated_build = True

[testenv]
passenv = PYTHON*
sitepackages = True
commands =
    python -m yapf -i -r ingress
    python -m pylint ingress
    python -m coverage run
    python -m coverage report
    python -m coverage html
"""
